Add dynamic post pages and routing - each post now has unique content

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,42 @@
   "version": 2,
   "routes": [
     {
+      "src": "/nowy-wpis-testowy",
+      "dest": "/posts/nowy-wpis-testowy.html"
+    },
+    {
+      "src": "/witaj-w-cms-flowscale",
+      "dest": "/posts/witaj-w-cms-flowscale.html"
+    },
+    {
+      "src": "/nowoczesne-technologie-webowe",
+      "dest": "/posts/nowoczesne-technologie-webowe.html"
+    },
+    {
+      "src": "/design-system-w-praktyce",
+      "dest": "/posts/design-system-w-praktyce.html"
+    },
+    {
+      "src": "/bezpieczenstwo-aplikacji-webowych",
+      "dest": "/posts/bezpieczenstwo-aplikacji-webowych.html"
+    },
+    {
+      "src": "/responsive-design-najlepsze-praktyki",
+      "dest": "/posts/responsive-design-najlepsze-praktyki.html"
+    },
+    {
+      "src": "/o-nas",
+      "dest": "/pages/o-nas.html"
+    },
+    {
+      "src": "/kontakt",
+      "dest": "/pages/kontakt.html"
+    },
+    {
+      "src": "/polityka-prywatnosci",
+      "dest": "/pages/polityka-prywatnosci.html"
+    },
+    {
       "src": "/admin/posts/new",
       "dest": "/admin/posts-new.html"
     },
